--- a/Products/pages-downloads/product-info/Bodrag Utilities.html
+++ b/Products/pages-downloads/product-info/Bodrag Utilities.html
@@ -15,6 +15,13 @@
 <h3>Bodrag Utilities</h3>
 <strong>Bodrag Utilities</strong> is an award winning application suite with excellent tools to optimize your PC. It cleans your computer of invalid registry entries, junk files and internet traces.
 It enhances system speed by disabling unneeded features, compacting and defragmenting registry.
+[sm_hr]
+<strong>Version:</strong>          <span>1.10</span>
+<strong>Release date:</strong>     <span>November 30, 2010</span>
+<strong>Trial period:</strong>     <span>30 days</span>
+<strong>Platform:</strong>         <span>Windows 98, Me, 2000, XP, Vista, Windows 7</span>
+<strong>Languages:</strong>       <span>English</span>
+[sm_hr]
 <div style="margin-top: 20px">
     [button text="BUY" link="http://localhost/wordpress/product/bodrag-utilities" style="default" size="normal" target="_self" display="inline" icon="no"]
     [button text="free download" link="http://localhost/wordpress/downloads/wipe-expert-3" style="default" size="normal" target="_self" display="inline" icon="no"]
