--- a/Products/pages-downloads/product-info/Bodrag Utilities.html
+++ b/Products/pages-downloads/product-info/Bodrag Utilities.html
@@ -24,7 +24,7 @@ It enhances system speed by disabling unneeded features, compacting and defragme
 [sm_hr]
 <div style="margin-top: 20px">
     [button text="BUY" link="http://localhost/wordpress/product/bodrag-utilities" style="default" size="normal" target="_self" display="inline" icon="no"]
-    [button text="free download" link="http://localhost/wordpress/downloads/wipe-expert-3" style="default" size="normal" target="_self" display="inline" icon="no"]
+    [button text="free download" link="#download" style="default" size="normal" target="_self" display="inline" icon="no"]
 </div>
 [/extra_wrap]
 [/custom_element]
