--- a/Products/pages-downloads/product-info/Outlook Express Backup Expert.html
+++ b/Products/pages-downloads/product-info/Outlook Express Backup Expert.html
@@ -14,11 +14,12 @@
 [extra_wrap]
 <strong>OUTLOOK EXPRESS BACKUP EXPERT</strong> is an award winning email backup tool that helps you to create easily Outlook Express backup copies for your emails.
 [sm_hr]
-<strong>Version:</strong>          <span>1.10</span>
-<strong>Release date:</strong>     <span>November 30, 2010</span>
-<strong>Trial period:</strong>     <span>30 days</span>
+<strong>Version:</strong>          <span>1.40</span>
+<strong>Release date:</strong>     <span>September 20, 2006</span>
+<strong>Trial period:</strong>     <span>15 days</span>
 <strong>Platform:</strong>         <span>Windows 98, Me, 2000, XP, Vista, Windows 7</span>
-<strong>Languages:</strong>       <span>English</span>
+<strong>Languages:</strong>        <span>English, French, Spanish, German, Hungarian, Russian, Portuguese, Italian</span>
+
 [sm_hr]
 <div style="margin-top: 20px">
     [button text="BUY" link="http://localhost/wordpress/product/outlook-express-backup-expert" style="default" size="normal" target="_self" display="inline" icon="no"]
@@ -30,7 +31,7 @@
 [/span12]
 
 &nbsp;
-
+[span12]
 <strong>OUTLOOK EXPRESS BACKUP EXPERT</strong> - a perfect solution to keep your emails safe. If you usually use Outlook Express to manage your daily personal or business emails, we inform you that worms, Trojans, viruses, hardware failure and even human errors can cause the loss of the important information in your emails.
 Using our product, you can prevent all these things from happening.
 
@@ -44,6 +45,7 @@ Our product makes possible synchronizing data between two or more computers, eve
 Another important feature of the software is the schedule function that helps you automatically back up the needed files.
 Also you can protect the backed up files with a password to prevent unauthorized access to your private emails and you can save the backup file to multiple volume disks.
 
+[/span12]
 [/row]
 
 [row]
