--- a/Products/pages-downloads/product-info/Outlook Express Backup Expert.html
+++ b/Products/pages-downloads/product-info/Outlook Express Backup Expert.html
@@ -49,8 +49,8 @@ Also you can protect the backed up files with a password to prevent unauthorized
 [/row]
 
 [row]
-
-
+&nbsp;
+<br>
 [span12]
 <h2>Features</h2>
 [hr]
