--- a/Products/pages-downloads/product-info/RAM Booster Expert.html
+++ b/Products/pages-downloads/product-info/RAM Booster Expert.html
@@ -18,6 +18,17 @@
 Our product is a memory optimization tool that will help you to increase the computer free memory count and will make your Windows to run faster and stable.
 It also display many useful information's about system memory (free, used and total physical memory, free, used and total page file, clipboard content size and CPU usage).
 Use our memory cleaner, RAM Booster Expert, and boost your computer free memory now!
+[sm_hr]
+<strong>Version:</strong>          <span>1.30</span>
+<strong>Release date:</strong>     <span>August 09, 2006</span>
+<strong>Trial period:</strong>     <span>15 days</span>
+<strong>Platform:</strong>         <span>Windows 98, Me, 2000, XP, Vista, Windows 7</span>
+<strong>Languages:</strong>        <span>Engleza, Franceza, Slovaca, Italiana</span>
+[sm_hr]
+<div style="margin-top: 20px">
+    [button text="BUY" link="http://localhost/wordpress/product/bodrag-utilities" style="default" size="normal" target="_self" display="inline" icon="no"]
+    [button text="free download" link="#download" style="default" size="normal" target="_self" display="inline" icon="no"]
+</div>
 [/extra_wrap]
 [/custom_element]
 
